Updated media queries to fix the size of the ingredient images on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,14 @@ main {
   .item {
     width: calc(100% / 2);
   }
+
+  .img-contain {
+    width: 16vw;
+  }
+
+  .img-clicked {
+    width: 16vw;
+  }
 }
 
 @media screen and (width <= 380px) {
@@ -153,5 +161,13 @@ main {
 
   .item {
     width: calc(100% / 1);
+  }
+
+  .img-contain {
+    width: 25vw;
+  }
+
+  .img-clicked {
+    width: 25vw;
   }
 }
